# reqif

./: .gitignore  .pylint.ini  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  tasks.py
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml
reqif/: __init__.py  object_lookup.py  parser.py  passthrough.py  progress.py  reqif_bundle.py  specification_iterator.py  unparser.py  writer.py
reqif/cli/: cli_arg_parser.py  main.py
reqif/commands/anonimize/: anonimize.py
reqif/commands/anonymize/: anonymize.py
reqif/commands/dump/: dump.py
reqif/commands/dump/templates/: index.jinja.html
reqif/commands/format/: format.py
reqif/commands/passthrough/: passthrough.py
reqif/commands/process/: process.py
reqif/commands/validate/: validate.py
reqif/commands/version/: version_command.py
reqif/experimental/: reqif_schema.py
reqif/helpers/: debug.py  lxml.py  reqif_datetime.py  string.py
reqif/helpers/string/: escape.py  xhtml_indent.py
reqif/models/: error_handling.py  reqif_core_content.py  reqif_data_type.py  reqif_namespace_info.py  reqif_relation_group.py  reqif_relation_group_type.py  reqif_req_if_content.py  reqif_reqif_header.py  reqif_spec_hierarchy.py  reqif_spec_object.py  reqif_spec_object_type.py  reqif_spec_relation.py  reqif_spec_relation_type.py  reqif_specification.py  reqif_specification_type.py  reqif_types.py
reqif/parsers/: attribute_definition_parser.py  attribute_value_parser.py  data_type_parser.py  header_parser.py  relation_group_parser.py  spec_hierarchy_parser.py  spec_object_parser.py  spec_object_type_parser.py  spec_relation_parser.py  specification_parser.py
reqif/parsers/spec_types/: relation_group_type_parser.py  spec_object_type_parser.py  spec_relation_type_parser.py  specification_type_parser.py
reqif/reqif_schema/: reqif.xsd
tests/integration/: compare_zip_files.py  html_markup_validator.py  lit.cfg
tests/integration/commands/anonimize/01_SPEC-OBJECT_attribute_values/: sample.reqif  test.itest
tests/integration/commands/anonimize/02_SPEC-OBJECT_XHTML/: sample.reqif  test.itest
tests/integration/commands/anonimize/05_SPECIFICATION_VALUES/: sample.reqif
tests/integration/commands/anonimize/06_SPECIFICATION_LONG_NAME/: sample.reqif
tests/integration/commands/anonimize/20_HEADER_COMMENT/: sample.reqif  test.itest
tests/integration/commands/dump/01_basic_example/: sample.reqif  test.itest
tests/integration/commands/format/01_valid_markup_is_preserved/: test.itest
tests/integration/commands/format/02_spaces_in_attributes/: sample.reqif  test.itest
tests/integration/commands/format/03_incorrect_whitespace/: sample.reqif  test.itest
tests/integration/commands/process/01_basic_example/: test.itest
tests/integration/commands/validate/01_valid_file/: sample.reqif  test.itest
tests/integration/commands/validate/02_missing_xml_doctype_declaration/: sample.reqif  test.itest
tests/integration/commands/validate/03_doctype_incorrect_encoding/: sample.reqif  test.itest
tests/integration/commands/validate/04_empty_file/: test.itest
tests/integration/commands/validate/05_random_file_from_chatgpt/: sample.reqif  test.itest
tests/integration/commands/version/01_print_version/: test.itest
tests/integration/dump/01_basic_example/: test.itest
tests/integration/examples/01_create_reqif_objects/: script.py
tests/integration/examples/02_read_reqif/: input.reqif  script.py
tests/integration/examples/03_read_reqifz/: input.reqifz  script.py  test.itest
tests/integration/examples/04_convert_reqif_to_json/: sample.reqif  sample.reqifz  sample1_polarion.reqif  sample2_sdoc.reqif  sample_polarion_reqifz.reqifz  script.py  test.itest
tests/integration/examples/04_convert_reqif_to_json/expected/: output.json  sample1_polarion.json  sample2_sdoc.json  sample3_eclipse_rmf.json
tests/integration/examples/10_excel_convert_excel_to_reqif/: input.xlsx  script.py  test.itest
tests/integration/examples/Doors/01_anonimized_example_date_data_type/: sample.reqif
tests/integration/examples/Doors/03_example_from_a_user/: sample.reqif
tests/integration/examples/Doors/06_example_from_a_user/: sample.reqif
tests/integration/examples/Other/other_01_random_example/: sample.reqif
tests/integration/examples/ReqIF_Studio/01_anonimized_example/: sample.reqif
tests/integration/examples/org.eclipse.rmf/: README
tests/integration/reqif_software/SparxSystems_Enterprise_Architect_8.0/: README
tests/integration/reqifz/02_reqifz_with_one_reqif_and_one_attachments_nested_folder/: sample.reqifz  test.itest
tests/unit/: conftest.py
tests/unit/reqif/: test_parser.py  test_progress.py  test_reqif_bundle.py
tests/unit/reqif/helpers/: test_debug.py  test_lxml.py  test_reqif_datetime.py  test_string.py
tests/unit/reqif/parsers/: test_data_type_parser.py  test_header_parser.py  test_relation_group_type_parser.py  test_spec_hierarchy.py  test_spec_object_parser.py  test_spec_object_parser_strip_xhtml.py  test_spec_object_parser_xhtml_indentation.py  test_spec_relation_parser.py  test_spec_type_parser.py  test_specification_parser.py  test_specification_type_parser.py
(+99 files in other folders)
